--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,23 @@
+/* added a new font  */
+@font-face {
+   font-family: roboto;
+   src: url(/fonts/RobotoSlab-Thin.ttf);
+}
+
+/* body CSS for a new background color */
+body{
+    background-color: #ffffc6
+}
+
 #content {
   margin-left: auto;
   margin-right: auto;
   width: 650px;
+  font-family: roboto;
 }
 
 #greeting-container {
   margin-top: 20px;
 }
+
+
