--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -22,4 +22,50 @@ body {
   margin-top: 20px;
 }
 
+#button1 {
+    background: url(/images/hair1.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 300px;
+    left: 200px;
+    width: 400px;
+    height: 400px;
+    background-size: 100%;
+    border: 0;
+}
 
+#button2 {
+    background: url(/images/hair2.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: 300px;
+    left: 600px;
+    width: 400px;
+    height: 400px;
+    background-size: 100%;
+    border: 0;
+}
+
+#button3 {
+    background: url(/images/hair3.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 300px;
+    left: 1050px;
+    width: 400px;
+    height: 400px;
+    background-size: 100%;
+    border: 0;
+}
+
+#button4 {
+    background: url(/images/hair4.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: 370px;
+    left: 1600px;
+    width: 400px;
+    height: 400px;
+    background-size: 100%;
+    border: 0;
+}
