--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -22,50 +22,52 @@ body {
   margin-top: 20px;
 }
 
+/* first button from the left */
 #button1 {
     background: url(/images/hair1.png);
-    background-repeat: no-repeat;
     position: absolute;
-    top: 300px;
-    left: 200px;
-    width: 400px;
-    height: 400px;
+    top: 25%;
+    left: 15%;
+    width: 15%;
+    height: 30%;
     background-size: 100%;
     border: 0;
 }
 
+
+/* second button from the left */
 #button2 {
     background: url(/images/hair2.png);
-    background-repeat: no-repeat;
     position: absolute;
-    bottom: 300px;
-    left: 600px;
-    width: 400px;
-    height: 400px;
+    bottom: 25%;
+    left: 30%; /*600px*/
+    width: 15%;
+    height: 30%;
     background-size: 100%;
     border: 0;
 }
 
+/* third button from the left */
 #button3 {
     background: url(/images/hair3.png);
-    background-repeat: no-repeat;
     position: absolute;
     top: 300px;
-    left: 1050px;
-    width: 400px;
-    height: 400px;
+    left: 45%; 
+    width: 15%;
+    height: 30%;
     background-size: 100%;
     border: 0;
 }
 
+/* fourth button from the left */
 #button4 {
     background: url(/images/hair4.png);
     background-repeat: no-repeat;
     position: absolute;
-    bottom: 370px;
-    left: 1600px;
-    width: 400px;
-    height: 400px;
+    bottom: 25%;
+    left: 60%;
+    width: 15%;
+    height: 30%;
     background-size: 100%;
     border: 0;
 }
