--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -51,7 +51,7 @@ body {
 #button3 {
     background: url(/images/hair3.png);
     position: absolute;
-    top: 300px;
+    top: 25%;
     left: 45%; 
     width: 15%;
     height: 30%;
