--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -36,7 +36,7 @@ body {
 
 
 /* Second button from the left. */
-#button2 {
+#cs-page-image-link {
     background: url(/images/hair2.png);
     position: absolute;
     bottom: 25%;
