make id more specific and add alt text for third button

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 /* Third button from the left. */
-#button3 {
+#youtube-page-image-link {
     background: url(/images/hair3.png);
     position: absolute;
     top: 25%;
