make id more specific and add alt text for fourth button

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 /* Fourth button from the left. */
-#button4 {
+#funfact-page-image-link {
     background: url(/images/hair4.png);
     background-repeat: no-repeat;
     position: absolute;
