add functionality to third button

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -96,3 +96,13 @@ body {
      font-size: 24px;
      color: white;
  }
+
+ /* Youtube page link label. */
+ #youtube-page-image-label {
+     position: absolute;
+     top: 49%;
+     left: 50.5%;
+     font-family: barrio;
+     font-size: 24px;
+     color: white;
+ }
