--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -106,3 +106,13 @@ body {
      font-size: 24px;
      color: white;
  }
+
+ /* Fun facts page link label. */
+ #funfacts-page-image-label {
+     position: absolute;
+     bottom: 27%;
+     left: 68.5%;
+     font-family: barrio;
+     font-size: 24px;
+     color: white;
+ }
