--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -12,7 +12,7 @@
 
 /* Body CSS for a new background color. */
 body {
-    background-color: #ffffc6;
+    background-color: #78a2ef;
 }
 
 #content {
@@ -95,4 +95,15 @@ body {
      font-family: barrio;
      font-size: 24px;
      color: white;
+ }
+
+ #home-page-name {
+     position: absolute;
+     font-family: barrio;
+     writing-mode: vertical-rl;
+     text-orientation: upright;
+     color:white;
+     font-size: 72px;
+     top: 4%;
+     right: 3%;
  }
