--- a/portfolio/src/main/webapp/youtube-style.css
+++ b/portfolio/src/main/webapp/youtube-style.css
@@ -8,4 +8,18 @@
   margin: 10px;
   padding: 10px;
   width: 300px;
+  height: 40px;
+}
+
+.idea span {
+  flex-grow: 1;
+}
+
+.upvote-button {
+  background: url("/images/up_arrow_icon.png");
+  background-size: 100%;
+  border: 0;
+  height:30px;
+  width: 30px;
+
 }
