make createMarkerImage function which will run everytime an icon is clicked

--- a/portfolio/src/main/webapp/About Me/aboutme-style.css
+++ b/portfolio/src/main/webapp/About Me/aboutme-style.css
@@ -8,3 +8,9 @@ span {
     text-decoration: underline;
     font-weight: bold;
 }
+
+#marker-image {
+    height: 400px;
+    width:400px;
+    border: 0;
+}
